--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/react-helmet": "^6.1.11",
+    "@types/roslib": "^1.3.4",
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
     "dayjs": "^1.11.10",
